[package]
name = "wasi-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
github-flows = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
openai-flows = "0.2.2"
http_req_wasi = { version = "0.10.2", features = ["wasmedge_ssl"] }
slack-flows = "0.2.6"
regex = "1.7.3"
